--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .social-container {
-    background: rgb(1, 1, 15);
+    
     color:azure;
     padding: 25px 50px;
     height:400;
@@ -35,4 +35,12 @@
   
   a.instagram {
     color:orangered;
+  }
+  footer{
+    background: rgb(13, 16, 63);
+    color: oldlace;
+    width:100%;
+    clear:both;
+    bottom: 0;
+    left: 0;
   }
