--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body{
 .social-container {
   display: flex;
     color:azure;
-    width:auto;
+    width:30%;
     height:50px;
     bottom: 0;
     clear:both;
@@ -53,16 +53,19 @@ body{
     color:orangered;
   }
   .footer{
+    left: 0;
+    bottom: 0;
+    right:0;
     display: flex;
+    position: relative;
     background-color: rgb(42, 43, 48);
     border-top: 1px solid grey;
     text-align: center;
     padding: 20px;
-    left: 0;
-    bottom: 0;
     height: 200px;
     width: 100%;
     color: rgb(235, 242, 243);
+    clear:both;
   }
 
   /* Media Queries: Tablet Landscape */
@@ -89,3 +92,7 @@ body{
         content: attr(data-src-800px, url);
     }
 }
+
+@media (min-width: 640px) { body {font-size:1rem;} } 
+@media (min-width:960px) { body {font-size:1.2rem;} } 
+@media (min-width:1100px) { body {font-size:1.5rem;} } 
