--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
 body{
   width:100%;
   height:100%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .social-container {
