--- a/src/index.css
+++ b/src/index.css
@@ -59,26 +59,40 @@ body{
   a.instagram {
     color:orangered;
   }
-  .footer{
-    left: 0;
-    bottom: 0;
-    right:0;
+
+  .row-no-gutters{
     display: flex;
-    position: relative;
-    border-top: 1px solid grey;
-    text-align: center;
-    padding: 20px;
-    height: 250px;
-    width: 100%;
-    color: rgb(235, 242, 243);
-    clear:both;
+    flex-direction: row;
+    flex: 1;
+    justify-content: space-evenly;
   }
-  footer{
+
+  .btn-rounded {
+    background-color: rgb(11, 11, 49);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
     display: inline-block;
-    bottom:0;
-    left:0;
+    font-size: 16px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 12px;
   }
   
+  .btn-rounded:hover {
+    background-color: purple;
+    color: black;
+    transition-timing-function: ease-in-out;
+    transition: 0.3s;
+    text-decoration: none;
+  }
+
+  .relative{
+    display: flex;
+    flex-direction: column;
+  }
   /* Media Queries: Tablet Landscape */
 @media screen and (max-width: 1060px) {
   #primary { width:67%; }
